--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fotografi BBPPMVSB</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Use a compiled Tailwind CSS build to avoid the CDN runtime warning in production -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <script src="/_sdk/element_sdk.js"></script>
   <style>
     body {
@@ -47,8 +48,8 @@
  </head>
  <body class="min-h-full"><!-- Hero Section -->
   <section id="home" class="hero-gradient text-white py-0 px-0">
-  <div class="w-full h-[60vh] md:h-screen relative"><!-- Carousel Container -->
-    <div id="carousel-container" class="w-full h-full relative overflow-hidden"><!-- Image 1 -->
+  <div class="w-full md:h-screen relative" style="height:60vh; min-height:300px;"><!-- Carousel Container -->
+    <div id="carousel-container" class="w-full h-full relative overflow-hidden" style="min-height:300px;"><!-- Image 1 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-pink-400 to-rose-500 flex items-center justify-center transition-opacity duration-500 opacity-100">
    <img src="1.jpg" alt="Slide 1" class="w-full h-full object-cover" loading="lazy" />
   </div><!-- Image 2 -->
@@ -71,7 +72,7 @@
   </section><!-- Portfolio Section -->
   <section id="portfolio" class="py-20 px-4 bg-gray-50">
    <div class="max-w-7xl mx-auto">
-    <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">HASIL KARYA UPSKILLINK DAN RESKILLING FOTOGRAFI GELOMBANG 4</h2>
+    <h2 class="text-2xl font-bold text-center mb-12 text-gray-800">HASIL KARYA UPSKILLINK DAN RESKILLING FOTOGRAFI GELOMBANG 4</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"><!-- Portfolio Card 1 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg">
   <div class="h-64 bg-gradient-to-br from-pink-400 to-purple-500">
@@ -381,8 +382,10 @@
       });
     });
 
-    // Auto-play carousel
-    setInterval(nextSlide, 4000);
+  // Ensure initial slide visible
+  showSlide(0);
+  // Auto-play carousel
+  setInterval(nextSlide, 4000);
 
     // --- Draggable focal-point for carousel images ---
     // Allows user to drag images to adjust object-position so faces aren't cropped.
