--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fotografi BBPPMVSB</title>
-  <!-- Use a compiled Tailwind CSS build to avoid the CDN runtime warning in production -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="/_sdk/element_sdk.js"></script>
   <style>
     body {
@@ -41,6 +40,20 @@
 
     /* hint removed per user request */
 
+    /* Responsive fallback: make carousel images shrink on small screens (Android) */
+    @media (max-width: 480px) {
+      /* Ensure carousel container is not too tall on small devices */
+      #carousel-container { height: 40vh; }
+
+      /* Make images fit inside the container rather than cover (so they visually shrink)
+         Use !important to override inline styles or Tailwind if CDN is unavailable. */
+      #carousel-container .carousel-slide img {
+        object-fit: contain !important;
+        width: auto !important;
+        height: 100% !important;
+      }
+    }
+
 
   </style>
   <style>@view-transition { navigation: auto; }</style>
@@ -48,22 +61,22 @@
  </head>
  <body class="min-h-full"><!-- Hero Section -->
   <section id="home" class="hero-gradient text-white py-0 px-0">
-  <div class="w-full md:h-screen relative" style="height:60vh; min-height:300px;"><!-- Carousel Container -->
-    <div id="carousel-container" class="w-full h-full relative overflow-hidden" style="min-height:300px;"><!-- Image 1 -->
+  <div class="w-full h-[40vh] md:h-screen relative"><!-- Carousel Container -->
+    <div id="carousel-container" class="w-full h-full relative overflow-hidden"><!-- Image 1 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-pink-400 to-rose-500 flex items-center justify-center transition-opacity duration-500 opacity-100">
-   <img src="1.jpg" alt="Slide 1" class="w-full h-full object-cover" loading="lazy" />
+  <img src="1.jpg" alt="Slide 1" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div><!-- Image 2 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-purple-400 to-indigo-500 flex items-center justify-center transition-opacity duration-500 opacity-0">
-   <img src="2.jpg" alt="Slide 2" class="w-full h-full object-cover" loading="lazy" />
+  <img src="2.jpg" alt="Slide 2" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div><!-- Image 3 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-blue-400 to-cyan-500 flex items-center justify-center transition-opacity duration-500 opacity-0">
-   <img src="3.jpg" alt="Slide 3" class="w-full h-full object-cover" loading="lazy" />
+  <img src="3.jpg" alt="Slide 3" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div><!-- Image 4 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-emerald-400 to-teal-500 flex items-center justify-center transition-opacity duration-500 opacity-0">
-   <img src="4.jpg" alt="Slide 4" class="w-full h-full object-cover" loading="lazy" />
+  <img src="4.jpg" alt="Slide 4" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div><!-- Image 5 -->
   <div class="carousel-slide absolute inset-0 bg-gradient-to-br from-orange-400 to-red-500 flex items-center justify-center transition-opacity duration-500 opacity-0">
-   <img src="5.jpg" alt="Slide 5" class="w-full h-full object-cover" loading="lazy" />
+  <img src="5.jpg" alt="Slide 5" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div>
     </div><!-- Navigation Dots -->
   <div class="absolute bottom-4 md:bottom-8 left-1/2 transform -translate-x-1/2 flex space-x-3"><button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-100 transition-opacity duration-300 shadow-lg" data-slide="0"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="1"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="2"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="3"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="4"></button>
@@ -72,7 +85,7 @@
   </section><!-- Portfolio Section -->
   <section id="portfolio" class="py-20 px-4 bg-gray-50">
    <div class="max-w-7xl mx-auto">
-    <h2 class="text-2xl font-bold text-center mb-12 text-gray-800">HASIL KARYA UPSKILLINK DAN RESKILLING FOTOGRAFI GELOMBANG 4</h2>
+    <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">HASIL KARYA UPSKILLING DAN RESKILLING FOTOGRAFI GELOMBANG 4</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"><!-- Portfolio Card 1 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg">
   <div class="h-64 bg-gradient-to-br from-pink-400 to-purple-500">
@@ -80,7 +93,7 @@
   </div>
       <div class="p-6">
        <h3 class="text-xl font-bold mb-2 text-gray-800">Muh. Irfan Basri</h3>
-  <p class="text-gray-600 mb-4">SMKN 7 Bone</p><a href="slide.html" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-4">SMKN 7 Bone</p><a href="https://online.pubhtml5.com/sqnph/kwga/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700 transition duration-300">View Details</a>
       </div>
      </div><!-- Portfolio Card 2 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg">
@@ -382,10 +395,8 @@
       });
     });
 
-  // Ensure initial slide visible
-  showSlide(0);
-  // Auto-play carousel
-  setInterval(nextSlide, 4000);
+    // Auto-play carousel
+    setInterval(nextSlide, 4000);
 
     // --- Draggable focal-point for carousel images ---
     // Allows user to drag images to adjust object-position so faces aren't cropped.
